content section text

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
       "dom.iterable",
       "esnext"
     ],
+    "compilerOptions": {
+      "isolatedModules": false
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
